--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,34 @@ body {
   margin: auto;
 }
 
+a {
+  text-decoration: none;
+  text-align: center;
+}
+
+/* TYPOGRAPHY */
+h1,
+h2 {
+  font-family: 'Playfair Display', serif;
+}
+
+p,
+a {
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: 100;
+  margin-bottom: 20px;
+}
+
+a.button {
+  font-size: 16px;
+  font-weight: 600;
+}
+
 /* HEADER STYLES */
 header {
   display: flex;
@@ -20,4 +48,32 @@ header {
 
 .menu-icon {
   margin: 19px;
+}
+
+.headline {
+  padding: 16px;
+}
+
+/* BUTTONS */
+.dark-button {
+  display: block;
+  background-color: #1a2236;
+  color: #fff;
+  border: none;
+  padding: 15px;
+  margin: 30px auto;
+}
+
+.dark-button:hover,
+.dark-button:visited {
+  background-color: #fff;
+  color: #1a2236;
+}
+
+.dark-button:hover {
+  border: 1px #1a2236 solid;
+}
+
+.dark-button:active {
+  border: 2px #1a2236 solid;
 }
