--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,22 @@ a {
 h1,
 h2 {
   font-family: 'Playfair Display', serif;
+  font-size: 50px;
+  font-weight: 100;
+  margin: 20px auto 20px 0;
 }
 
 p,
-a {
+a,
+h3,
+.language {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
 }
 
-h1 {
-  font-size: 50px;
-  font-weight: 100;
-  margin-bottom: 20px;
+h3 {
+  font-size: 20px;
+  font-weight: 300;
 }
 
 a.button {
@@ -40,7 +44,8 @@ a.button {
 
 /* HEADER STYLES */
 header {
-  background: url("images/image_geometry_1.svg") no-repeat;
+  background: url("images/image-geometry_6.svg") no-repeat;
+  background-size: 35.5%;
   height: 75px;
 }
 
@@ -50,7 +55,44 @@ header {
 }
 
 .headline {
-  padding: 16px;
+  background: url("images/image-geometry_1.svg") 0 400px no-repeat;
+  height: 560px;
+  background-size: 100%;
+}
+
+/* PROJECTS STYLES */
+/* .projects {
+  background: url("images/image_geometry_2.svg") no-repeat;
+  padding-top: 200px;
+} */
+
+.project-box {
+  background-color: #1a2236;
+  padding: 20px;
+  margin: 0;
+}
+
+.project-name {
+  color: #fff;
+}
+
+.fa-arrow-right {
+  width: 20px;
+  margin: auto;
+}
+
+.language-container {
+  display: flex;
+  gap: 10px;
+  margin: 10px 0;
+}
+
+.language {
+  background-color: #98dede;
+  color: #1a2236;
+  padding: 6px 10px;
+  font-size: 10px;
+  font-weight: 500;
 }
 
 /* BUTTONS */
@@ -75,4 +117,12 @@ header {
 
 .dark-button:active {
   border: 2px #1a2236 solid;
+}
+
+.see-project {
+  border: 1px #fff solid;
+  width: 178px;
+  margin: 20px auto 0 0;
+  display: flex;
+  gap: 12px;
 }
