--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ body {
   margin: auto;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
 a {
   text-decoration: none;
   text-align: center;
@@ -21,13 +27,15 @@ h2 {
   font-family: 'Playfair Display', serif;
   font-size: 50px;
   font-weight: 100;
-  margin: 20px auto 20px 0;
+  margin-bottom: 20px;
 }
 
 p,
 a,
 h3,
-.language {
+.language,
+.about-list,
+.about-list-heading {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
 }
@@ -37,9 +45,21 @@ h3 {
   font-weight: 300;
 }
 
-a.button {
+a.button,
+.about-list {
   font-size: 16px;
   font-weight: 600;
+}
+
+.about-list-heading,
+.about-list {
+  color: #fff;
+}
+
+.about-list-heading {
+  font-weight: 800;
+  font-size: 18px;
+  padding: 50px 0 20px 50px;
 }
 
 /* HEADER STYLES */
@@ -61,11 +81,6 @@ header {
 }
 
 /* PROJECTS STYLES */
-/* .projects {
-  background: url("images/image_geometry_2.svg") no-repeat;
-  padding-top: 200px;
-} */
-
 .project-box {
   background-color: #1a2236;
   padding: 20px;
@@ -95,6 +110,56 @@ header {
   font-weight: 500;
 }
 
+/* ABOUT STYLES */
+.about {
+  padding: 0 16px;
+}
+
+.about-box {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.about-lang-color,
+.about-fwork-color,
+.about-skills-color,
+.about-languages,
+.about-framework,
+.about-skills {
+  margin: auto;
+  width: 289px;
+  height: 289px;
+}
+
+.about-lang-color {
+  background: #1c528a;
+}
+
+.about-fwork-color {
+  background: #e2505c;
+}
+
+.about-skills-color {
+  background: #febf52;
+}
+
+.about-languages {
+  background: url("images/ic_languages.svg") right bottom no-repeat;
+}
+
+.about-framework {
+  background: url("images/ic_framework.svg") right bottom no-repeat;
+}
+
+.about-skills {
+  background: url("images/ic_skills.svg") right bottom no-repeat;
+}
+
+.about-list {
+  margin-left: 30px;
+}
+
 /* BUTTONS */
 .dark-button {
   display: block;
@@ -119,10 +184,15 @@ header {
   border: 2px #1a2236 solid;
 }
 
+.see-project,
+.get-cv {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
 .see-project {
   border: 1px #fff solid;
   width: 178px;
   margin: 20px auto 0 0;
-  display: flex;
-  gap: 12px;
 }
