--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,9 @@ a,
 h3,
 .language,
 .about-list,
-.about-list-heading {
+.about-list-heading,
+input,
+textarea {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
 }
@@ -69,11 +71,6 @@ button {
 .fa-arrow-up-right-from-square {
   font-size: 24px;
 }
-input,
-textarea {
-  font-size: 14px;
-  font-weight: 400;
-}
 
 /* HEADER STYLES */
 header {
@@ -104,7 +101,6 @@ footer {
   background: #1a2236;
   height: 100px;
   padding: 20px;
-  margin-top: 50px;
   gap: 30px;
   flex-direction: column;
   justify-content: center;
@@ -201,16 +197,11 @@ footer {
   margin-left: 30px;
 }
 
-/* CONTACT FORM */
+/* CONTACT FORM STYLES */
 .contact-form-background {
   background: url("images/image-geometry_6.svg") no-repeat;
   background-size: 35.5%;
   height: 75px;
-
-}
-
-.contact-header {
-  margin-top: 10%;
 }
 
 .contact-form-container {
@@ -218,22 +209,38 @@ footer {
   display: flex;
   flex-direction: column;
 }
-input {
-  height: 52px;
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  margin-top: 32px;
 }
 
 input,
 textarea {
-  width: 250px;
+  box-sizing: border-box;
   border-radius: 5px;
-  border: 1px solid #DFdFE0;
-  margin: 8px 0;
-  padding: 0 18px;
+  border: 1px solid #dfdfe0;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+input {
+  height: 52px;
+  padding: 0 16px;
 }
 
 textarea {
-  padding-top: 18px;
+  padding: 16px;
+  height: 112px;
 }
+
+input:valid,
+textarea:valid {
+  border: 2px solid #0f0;
+}
+
 /* BUTTONS */
 .dark-button {
   display: block;
