--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 
 body {
   background-color: #fff;
-  width: 320px;
   margin: auto;
 }
 
@@ -74,9 +73,9 @@ button {
 
 /* HEADER STYLES */
 header {
-  background: url("images/image-geometry_6.svg") no-repeat;
+  background: url("images/image_geometry_1.svg") no-repeat;
   background-size: 35.5%;
-  height: 75px;
+  height: 100px;
 }
 
 .menu-icon {
@@ -85,43 +84,28 @@ header {
 }
 
 .headline {
-  background: url("images/image-geometry_1.svg") 0 400px no-repeat;
-  height: 560px;
+  background: url("images/image_geometry_2.svg") 0 400px no-repeat;
+  height: 610px;
   background-size: 100%;
 }
 
-/* FOOTER STYLES */
-footer,
-.ft-get-resume,
-.social-networks {
-  display: flex;
-}
-
-footer {
-  background: #1a2236;
-  height: 100px;
-  padding: 20px;
-  gap: 30px;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.ft-get-resume {
-  align-items: center;
-  color: #92dcdc;
-  gap: 20px;
-}
-
-.social-networks {
-  align-items: center;
-  justify-content: space-between;
+.headline-container {
+  padding: 0 16px;
 }
 
 /* PROJECTS STYLES */
 .project-box {
   background-color: #1a2236;
   padding: 20px;
-  margin: 0;
+  margin: 0 auto;
+}
+
+.sub-heading {
+  padding-left: 16px;
+}
+
+.project-image {
+  width: 100%;
 }
 
 .project-name {
@@ -165,8 +149,8 @@ footer {
 .about-framework,
 .about-skills {
   margin: auto;
-  width: 289px;
-  height: 289px;
+  width: 100%;
+  height: 300px;
 }
 
 .about-lang-color {
@@ -198,10 +182,14 @@ footer {
 }
 
 /* CONTACT FORM STYLES */
+.contact-form {
+  background: #f9f9fa;
+}
+
 .contact-form-background {
-  background: url("images/image-geometry_6.svg") no-repeat;
+  background: url("images/image_geometry_1.svg") no-repeat;
   background-size: 35.5%;
-  height: 75px;
+  height: 100px;
 }
 
 .contact-form-container {
@@ -239,6 +227,37 @@ textarea {
 input:valid,
 textarea:valid {
   border: 2px solid #0f0;
+}
+
+/* FOOTER STYLES */
+footer {
+  margin-top: 50px;
+}
+
+.footer,
+.ft-get-resume,
+.social-networks {
+  display: flex;
+}
+
+.footer {
+  background: #1a2236;
+  height: 100px;
+  padding: 20px;
+  gap: 30px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ft-get-resume {
+  align-items: center;
+  color: #92dcdc;
+  gap: 20px;
+}
+
+.social-networks {
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* BUTTONS */
