--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ main {
 a {
   text-decoration: none;
   text-align: center;
+  color: #1a2236;
 }
 
 /* TYPOGRAPHY */
@@ -36,7 +37,8 @@ h3,
 .about-list,
 .about-list-heading,
 input,
-textarea {
+textarea,
+label {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
 }
@@ -52,6 +54,11 @@ a.button,
 button {
   font-size: 16px;
   font-weight: 600;
+}
+
+nav a {
+  font-size: 16px;
+  visibility: hidden;
 }
 
 .about-list-heading,
@@ -189,13 +196,17 @@ header {
 .contact-form-background {
   background: url("images/image_geometry_1.svg") no-repeat;
   background-size: 35.5%;
-  height: 100px;
+  height: 700px;
 }
 
 .contact-form-container {
-  padding: 18px;
+  padding: 100px 18px 0 18px;
   display: flex;
   flex-direction: column;
+}
+
+.contact-form-header {
+  padding-top: 200px;
 }
 
 form {
@@ -303,4 +314,223 @@ footer {
 
 .contact-button {
   width: 100%;
+}
+
+/* MEDIA QUERIES */
+
+/* Desktop Version */
+
+@media (min-width: 768px) {
+  /* HEADER SECTION */
+  header {
+    box-shadow: 0 0.5px 0 #dddfe6;
+    background: #fff;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  nav {
+    display: flex;
+    gap: 50px;
+  }
+
+  nav a {
+    visibility: visible;
+  }
+
+  nav a:hover {
+    border-bottom: 2px solid #1a2236;
+  }
+
+  .menu-icon {
+    visibility: hidden;
+  }
+
+  /* HEADLINE SECTION */
+  .headline {
+    background: url("images/image-geometry_1.svg") no-repeat 100% 100%, url("images/image_dots.svg") no-repeat 63% 100%;
+    background-size: 33%, 9%;
+    display: flex;
+    align-items: center;
+  }
+
+  .headline-container {
+    position: absolute;
+    width: 40%;
+    left: 11%;
+  }
+
+  /* PROJECT STYLES */
+  .projects {
+    background: url("images/image_dots.svg") no-repeat 30% 8%, url("images/image-geometry_5.svg") no-repeat 0 90%, url("images/image-geometry_2.svg") no-repeat 48% 52%, url("images/image-geometry_3.svg") no-repeat 80% 82%, url("images/image-geometry_4.svg") no-repeat 45% 90%;
+    background-size: 7%, 15%, 26%, 35%, 7%;
+  }
+
+  .project-heading {
+    display: inline-block;
+    transform: rotate(-90deg) translateX(-50%);
+    margin-left: 8%;
+    padding-right: 70px;
+  }
+
+  .project-boxes {
+    display: grid;
+    width: 100%;
+    background: none;
+    grid-template-areas:
+      ". . . p1 p1 p1 p1 p1"
+      ". . . p1 p1 p1 p1 p1"
+      "p2 p2 . . . . p5 p5"
+      "p3 p3 p3 p3 p3 . p5 p5"
+      "p3 p3 p3 p3 p3 . . ."
+      ". . . . . p4 p4 .";
+  }
+
+  .p1 { grid-area: p1; }
+  .p2 { grid-area: p2; }
+  .p3 { grid-area: p3; }
+  .p4 { grid-area: p4; }
+  .p6 { grid-area: p6; }
+
+  .p5 {
+    display: flex;
+    flex-direction: column;
+    height: 10%;
+    grid-area: p5;
+  }
+
+  .pb5 {
+    order: -1;
+    width: 100%;
+  }
+
+  .p6,
+  .pb3,
+  .pb4,
+  .pb2 {
+    display: none;
+  }
+
+  /* ABOUT STYLES */
+  .about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 950px;
+    padding: 0;
+  }
+
+  .about-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+  }
+
+  .about-box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
+    grid-area: 1 / 1;
+    background: url("images/image_dots_with_teal.svg") no-repeat 100% 100%;
+    background-size: 40%;
+  }
+
+  .about-note {
+    padding: 0 40px;
+  }
+
+  /* CONTACT FORM STYLES */
+  .contact-form-background {
+    background: url("images/image-geometry_6.svg") no-repeat, url("images/image-geometry_7.svg") no-repeat 100% 100%;
+    background-size: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-form-container {
+    padding: 0;
+    width: 542px;
+  }
+
+  form {
+    display: inline;
+    margin-top: 42px 0;
+  }
+
+  input {
+    width: 48%;
+    height: 60px;
+    margin-bottom: 42px;
+  }
+
+  #name {
+    float: left;
+  }
+
+  #email {
+    float: right;
+  }
+
+  textarea {
+    padding: 16px;
+    width: 100%;
+    height: 140px;
+  }
+
+  /* FOOTER STYLES */
+  .footer {
+    padding: 0 60px;
+    height: 8vh;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .social-networks {
+    gap: 32px;
+  }
+
+  /* BUTTONS */
+  .dark-button {
+    width: 254px;
+  }
+
+  .start-collaboration,
+  .get-cv {
+    width: 50%;
+    max-width: 254px;
+    margin: none;
+    float: left;
+  }
+
+  /* TYPOGRAPHY */
+  h1,
+  h2 {
+    font-size: 80px;
+  }
+
+  a.button {
+    font-size: 0.8rem;
+  }
+
+  .see-project {
+    gap: 0;
+    justify-content: space-between;
+    background-color: #1a2236;
+    color: #fff;
+  }
+
+  .see-project:hover {
+    background-color: #fff;
+    color: #1a2236;
+  }
+
+  .see-project-small {
+    width: 120px;
+    margin: 0;
+    justify-content: space-between;
+  }
 }
