--- a/styles.css
+++ b/styles.css
@@ -533,4 +533,8 @@ footer {
     margin: 0;
     justify-content: space-between;
   }
+
+  .button:hover {
+    transition: all 0.5s ease-in-out;
+  }
 }
