--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,20 @@ footer {
     border-bottom: 2px solid #1a2236;
   }
 
+  nav a {
+    animation-duration: 2s;
+    animation-name: slidein;
+    animation-direction: slidein;
+}
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+    }
+    to {
+        margin-left: 0%;
+    }
+}
+
   .menu-icon {
     visibility: hidden;
   }
